Fixeed the way contact displays on small screens

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -10,19 +10,23 @@
 .modal {
     position: relative;
     top: 50%;
-    width: 440px;
+    max-width: 440px;
+    width: calc(100%-40px);
     height: 200px;
     display: none;
     z-index: 5;
     padding: 20px;
     background-color: #fff;
     text-align: center;
+    font-size: .8em;
+    font-weight: bold;
     margin: -120px auto 0 auto;
     line-height: 100px;
     box-shadow: 0px 0px 30px #333333;
 }
 
 #small-text {
+    font-weight: 100 !important;
     font-size: 18px;
     line-height: 22px;
     padding-top: 40px;
